# yellow_car

./: CMakeLists.txt
config/: control_settings.yaml  semantic_segmentation_settings.yaml
include/car/: test_cpp_file.h
launch/: camera.launch  control.launch  object_detection.launch  on_start.launch  semantic_segmentation.launch
models/control/: laneFollowerNetwork.pt
models/semantic_segmentation/: train_network.pth  train_network_old_pytorch.pth
scripts/car/object_detection/: constants.py  feature_finder.py  object_tracker.py  pose_model.py  utils.py
scripts/car/semantic_segmentation/: model.py  semantic_segmentation.py
src/: fastLaneFollow.cpp  oldBeforeSeperationOfControlAndVision.cpp
src/semantic_segmentation/: semantic_segmentation.cpp
